--- a/NER_classification/requirements.txt
+++ b/NER_classification/requirements.txt
@@ -1,3 +1,9 @@
 kagglehub>=0.3.10
 torch>=2.5.1
 torchvision>=0.20.1
+pandas>=2.2.0
+numpy>=1.26.0
+openai>=1.12.0
+python-dotenv>=1.0.0
+scikit-learn>=1.4.0
+nltk>=3.8.1
